# matlab-py

./: .gitignore
doc/: 思路.md
scr/cpp/: CMakeLists.txt  flyball.h  flyball_data.cpp
scr/matlab/: flyball.slx  flyball.slxc  flyballDB.sldd  init.m
scr/matlab/flyballCode/matlab/flyball_ert_rtw/: buildInfo.mat  ert_main.cpp  flyball.cpp  flyball_types.h
scr/matlab/flyball_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  flyball.bat  flyball_manifest.txt  flyball_private.h  rtw_proj.tmw  rtwtypeschksum.mat
scr/matlab/flyball_ert_rtw/tmwinternal/: simulink_cache.xml  tr
scr/matlab/slprj/ert/_sharedutils/: shared_file.dmr
scr/matlab/slprj/ert/flyball/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat  scv
scr/matlab/slprj/sim/varcache/flyball/: checksumOfCache.mat  varInfo.mat
scr/matlab/slprj/sim/varcache/flyball/tmwinternal/: simulink_cache.xml
